tests/ui/crate_local_distributed_slice/generic_const.stderr
error: distributed slices can't be generic
  --> $DIR/generic_const.rs:6:1
   |
LL | const MEOWS<T>: [T; _];
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

